@@ -18,11 +18,14 @@ public class Teste {
         *
         * Transformação de primitivo para objeto, feita de forma automatica pelo Java.
         * */
+        //Tipo Primitivo
         int idade = 29; //Cria em objeto automaticamente
         //para cada tipo primitivo existe um tipo na Orientação a Objetos, uma classe que representa os tipos primitivos. exemplo: int = Integer
 
         //Por debaixo dos panos
-        Integer idadeRef = new Integer(29);
+        //Como criar um objeto usando o Integer
+        Integer idadeRef = Integer.valueOf(29); //Wrappers .valueOf() = método de buscar o valor de...
+        //Ao invés de criar um objeto (new) delegar a função para um método
         List <Integer> numeros2 = new ArrayList<Integer>();
 
         numeros2.add(idadeRef);
